2002-03-07  John Sullivan  <sullivan@apple.com>

	* src/kwq/kwqdebug.h: New debug level constants, kept in
	synch with WebKitDebug.h

	* src/kwq/KWQKHTMLPart.mm: (-[KHTMLPartLoadClient
	IFURLHandleResourceDidBeginLoading:]), (-[KHTMLPartLoadClient
	IFURLHandleResourceDidCancelLoading:]), (-[KHTMLPartLoadClient
	IFURLHandleResourceDidFinishLoading:data:]), (-[KHTMLPartLoadClient
	IFURLHandle:resourceDataDidBecomeAvailable:]), (-[KHTMLPartLoadClient
	IFURLHandle:resourceDidFailLoadingWithResult:]):
	* src/kwq/KWQKloader.mm: (-[URLLoadClient IFURLHandleResourceDidBeginLoading:]),
	(-[URLLoadClient IFURLHandleResourceDidCancelLoading:]), (-[URLLoadClient
	IFURLHandleResourceDidFinishLoading:data:]), (-[URLLoadClient
	IFURLHandle:resourceDataDidBecomeAvailable:]), (-[URLLoadClient
	IFURLHandle:resourceDidFailLoadingWithResult:]), (Loader::load),
	(Loader::servePendingRequests):
	* src/kwq/KWQView.mm: (-[KWQHTMLView layout]), (-[KWQHTMLView drawRect:]):
	Changed numeric debug levels to symbolic ones.

2002-03-07  Don Melton  <gramps@apple.com>

	Removed unused file in kdelibs that I missed in previous commit.

	* src/kdelibs/khtml/test/layout.html:

2002-03-06  Don Melton  <gramps@apple.com>

	Removed unused files in kdelibs.

	* src/kdelibs/AUTHORS:
	* src/kdelibs/README:
	* src/kdelibs/khtml/CHANGES:
	* src/kdelibs/khtml/DESIGN.html:
	* src/kdelibs/khtml/README.HTMLWidget:
	* src/kdelibs/khtml/README.tags:
	* src/kdelibs/khtml/SECURITY:
	* src/kdelibs/khtml/TODO:
	* src/kdelibs/khtml/design.h:
	* src/kdelibs/khtml/domtreeview.cpp:
	* src/kdelibs/khtml/domtreeview.h:
	* src/kdelibs/khtml/ecma/AUTHORS:
	* src/kdelibs/khtml/ecma/README:
	* src/kdelibs/khtml/ecma/THANKS:
	* src/kdelibs/khtml/ecma/TODO:
	* src/kdelibs/khtml/ecma/jsk.html:
	* src/kdelibs/khtml/ecma/testecma.cpp:
	* src/kdelibs/khtml/html/dtd.dtd:
	* src/kdelibs/khtml/java/KJAS_GRAMMAR.txt:
	* src/kdelibs/khtml/java/README:
	* src/kdelibs/khtml/java/TODO:
	* src/kdelibs/khtml/java/build.xml: